--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@layer components {
+  .btn-primary {
+    @apply bg-gradient-to-r from-[#f76cc6] to-[#220b34] border-gray-600 rounded text-white px-4
+  }
+}
